--- a/labtasks/02-xkcdcartoondisplayer/res/layout/activity_xkcd_cartoon_displayer.xml
+++ b/labtasks/02-xkcdcartoondisplayer/res/layout/activity_xkcd_cartoon_displayer.xml
@@ -26,7 +26,7 @@
 	    <ImageView
 	        android:id="@+id/xkcd_cartoon_image_view"
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
+	        android:layout_height="400dp"
 	        android:contentDescription="@string/xkcd_cartoon_content_description" />
 	    
 	    <TextView
